Fixing bug 11756, scanning metadata dialog gets truncated sometimes. r=mook
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@11190 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/jobProgress.css
+++ b/app/skin/dialogs/jobProgress.css
@@ -39,5 +39,6 @@ See SBJobUtils.jsm and sbIJobProgress.idl.
   width: 500px;
   min-width: 500px;
   max-width: 500px;
+  min-height: 10em;
 }
 
